# workflows-images

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  build_aspect.sh  build_aspect_image.sh  deps.bzl  docker_images.bzl  lookup_latest_revs.sh  packer.bzl  tools.lock.json
.github/workflows/: build.yaml
aws/al2/: docker.pkr.hcl  gcc.pkr.hcl  kitchen-sink.pkr.hcl  minimal.pkr.hcl
aws/al2023/: docker.pkr.hcl  gcc.pkr.hcl  kitchen-sink.pkr.hcl  minimal.pkr.hcl
aws/amazon-linux-2/: cambria.pkr.hcl  docker.pkr.hcl  gcc.pkr.hcl  minimal.pkr.hcl
aws/amazon-linux-2023/: gcc.pkr.hcl  minimal.pkr.hcl
aws/amazon-linux2/: docker.pkr.hcl  minimal.pkr.hcl
aws/buildkite-amazon-linux-2/: gcc.pkr.hcl  minimal.pkr.hcl
aws/buildkite-amazon-linux2/: minimal.pkr.hcl
aws/debian/: docker.pkr.hcl  minimal.pkr.hcl
aws/debian-11/: docker.pkr.hcl  gcc.pkr.hcl  kitchen-sink.pkr.hcl  minimal.pkr.hcl
aws/debian-12/: docker.pkr.hcl  gcc.pkr.hcl  kitchen-sink.pkr.hcl  minimal.pkr.hcl
aws/debian-13/: docker.pkr.hcl  gcc.pkr.hcl  kitchen-sink.pkr.hcl  minimal.pkr.hcl
aws/ubuntu-20/: docker.pkr.hcl  gcc.pkr.hcl  kitchen-sink.pkr.hcl  minimal.pkr.hcl
aws/ubuntu-2004/: docker.pkr.hcl  gcc.pkr.hcl  kitchen-sink.pkr.hcl  minimal.pkr.hcl
aws/ubuntu-2204/: docker.pkr.hcl  gcc.pkr.hcl  kitchen-sink.pkr.hcl  minimal.pkr.hcl
aws/ubuntu-2404/: custom-0.pkr.hcl  docker.pkr.hcl  gcc.pkr.hcl  kitchen-sink.pkr.hcl  minimal.pkr.hcl
gcp/debian-11/: docker.pkr.hcl  gcc.pkr.hcl  kitchen-sink.pkr.hcl  (+1 more)
tools/: _multitool_run_under_cwd.sh
(+25 files in other folders)
