load("//:packer.bzl", "packer")
load("//:docker_images.bzl", "docker_images")

exports_files(glob([
     "aws/**/*.hcl",
]))

packer(name = "packer")

docker_images()

alias(
    name = "packer_binary",
    actual = select({
        "//platforms/config:linux_x86_64": "@packer_linux_x86_64//:packer",
        "//platforms/config:macos_aarch64": "@packer_macos_aarch64//:packer",
        "//platforms/config:macos_x86_64": "@packer_macos_x86_64//:packer",
    }),
)